--- a/public/committees-home.html
+++ b/public/committees-home.html
@@ -202,15 +202,29 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="إغلاق"></button>
       </div>
       <div class="modal-body">
-        <div class="mb-3">
-          <label class="form-label">كلمة المرور الحالية</label>
-          <input type="password" class="form-control" name="currentPassword" required minlength="6" autocomplete="current-password">
-        </div>
-        <div class="mb-3">
-          <label class="form-label">كلمة المرور الجديدة (6 أحرف فأكثر)</label>
-          <input type="password" class="form-control" name="newPassword" required minlength="6" autocomplete="new-password">
-        </div>
-      </div>
+  <!-- الحقل: كلمة المرور الحالية + زر إظهار/إخفاء -->
+  <div class="mb-3">
+    <label class="form-label">كلمة المرور الحالية</label>
+    <div class="input-group">
+      <input type="password" class="form-control" id="currPwdInput" name="currentPassword" required minlength="6" autocomplete="current-password">
+      <button class="btn btn-outline-secondary toggle-pwd" type="button" data-target="#currPwdInput" aria-label="إظهار/إخفاء">
+        <i class="bi bi-eye"></i>
+      </button>
+    </div>
+  </div>
+
+  <!-- الحقل: كلمة المرور الجديدة + زر إظهار/إخفاء -->
+  <div class="mb-3">
+    <label class="form-label">كلمة المرور الجديدة (6 أحرف فأكثر)</label>
+    <div class="input-group">
+      <input type="password" class="form-control" id="newPwdInput" name="newPassword" required minlength="6" autocomplete="new-password">
+      <button class="btn btn-outline-secondary toggle-pwd" type="button" data-target="#newPwdInput" aria-label="إظهار/إخفاء">
+        <i class="bi bi-eye"></i>
+      </button>
+    </div>
+  </div>
+</div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-light" data-bs-dismiss="modal">إلغاء</button>
         <button type="submit" class="btn btn-primary">
@@ -223,7 +237,12 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  
   <script>
+
+
+    
     const toastSuccess = new bootstrap.Toast(document.getElementById('toastSuccess'));
     const toastError   = new bootstrap.Toast(document.getElementById('toastError'));
     const toastInfo    = new bootstrap.Toast(document.getElementById('toastInfo'));
@@ -329,6 +348,23 @@
       }
     }
 
+// تبديل إظهار/إخفاء كلمة المرور مع تبديل الأيقونة
+document.addEventListener('click', (e) => {
+  const btn = e.target.closest('.toggle-pwd');
+  if (!btn) return;
+  const input = document.querySelector(btn.dataset.target);
+  if (!input) return;
+
+  const isPassword = input.type === 'password';
+  input.type = isPassword ? 'text' : 'password';
+
+  const icon = btn.querySelector('i');
+  if (icon) {
+    icon.classList.toggle('bi-eye', !isPassword);
+    icon.classList.toggle('bi-eye-slash', isPassword);
+  }
+});
+    
     document.getElementById('logoutBtn').addEventListener('click', logout);
     ensureAuth();
 
