--- a/public/test1.html
+++ b/public/test1.html
@@ -65,7 +65,7 @@
   <!-- رسالة النتائج غير متوفرة -->
   <div id="notAvailable" class="container d-flex">
     <div class="mx-auto">
-      <div class="display-6 mb-2">النتائج غير متوفرة حاليًا</div>
+      <div class="display-6 mb-2">نتائج تقييم لجان الكليات غير متوفرة حاليًا</div>
       <p class="text-muted mb-0">يرجى العودة لاحقًا.</p>
     </div>
   </div>
